kubernetes/keycloak/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: keycloak-policy
  namespace: infra
spec:
  action: DENY
  rules:
    - to:
      - operation:
          paths:
            - "/auth/realms/*/metrics"
